# Build-First

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
api/: __init__.py  deps.py  main.py  schemas.py  store.py
api/routers/: compose.py  intake.py  learn.py  online.py  persona.py  posts.py  profile.py  takes.py
data/: intake.example.json  intake.sample.json  posttypes.json
docs/: decisions.md  deploy.md  self_learning.md  storage.md  talk_track.md  ui_contract.md
engine/: __init__.py  ablation.py  cli.py  compose.py  config.py  labs.json  learn.py  onboarding.json  onboarding.py  post.py  posttypes.py  proof.json  report.py  revise.py  rubric.json  signals.py  store.py  takes.py
engine/blocks/: __init__.py  brief.py  council.py  draft.py  gate.py  intake.py  persona.py  probe.py  profile.py  proof.py  receipts.py
engine/layers/: audience_tenex.md  format.md
engine/providers/: __init__.py  anthropic.py  base.py  claudecode.py  stub.py  terminal.py
engine/rubric/: __init__.py  schemas.py  shared.py
engine/web/: __init__.py  app.py  forms.py  jobs.py  launcher.py  sse.py
engine/web/routes/: __init__.py  onboarding.py  posting.py  status.py
engine/web/static/: app.css  app.js  brand.css  wizard.js
engine/web/templates/: base.html  draft.html  onboarding.html  persona_build.html  post.html  status.html
mockups/: compose.html  done.html  feed.html  home.html  index.html  landing-a-dark.html  landing-b-light.html  marketing.html  profile-view.html  profile.html  reveal.html  voice.html
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: learn.md  onboard.md  post.md  reset.md  timbre-onboard.md  timbre-post.md  timbre-reset.md  timbre-voice.md  voice.md
plugin/skills/timbre/: SKILL.md
profiles/: voice.example.json
server/: __init__.py  intake.py  main.py
server/static/: app.css  app.js  index.html
tests/: conftest.py  test_ablation.py  test_brief.py  test_claudecode.py  test_compose.py  test_gate.py  test_intake_routes.py  test_labs.py  test_learn.py  test_onboarding.py  test_persona.py  test_post.py  test_posttypes.py  test_probe.py  test_proof.py  test_providers.py  test_revise.py  test_rubric_rules.py  test_schemas.py  test_signals.py  test_store.py  test_takes.py  test_web.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/app/(app)/: layout.tsx
web/app/(app)/compose/: page.module.css  page.tsx
web/app/(app)/feed/: page.tsx
web/app/(app)/feed/[id]/: page.module.css  page.tsx
web/app/(app)/home/: page.module.css  page.tsx
web/app/(app)/profile/: page.tsx
web/app/api/[...path]/: route.ts
web/app/onboarding/: layout.tsx
web/app/onboarding/done/: page.module.css  page.tsx
web/app/onboarding/profile/: page.module.css  page.tsx
web/app/onboarding/reveal/: page.module.css  page.tsx
web/app/onboarding/voice/: page.module.css  page.tsx
web/app/onboarding/why/: page.tsx
web/components/: Brand.tsx  EvalPanel.module.css  EvalPanel.tsx  MarketingBg.module.css  MarketingBg.tsx  OnboardingTop.tsx  Sidebar.tsx  Waveform.tsx
web/lib/: api.ts  intake.ts  onboarding-store.ts  score.ts  time.ts
