[project]
name = "timbre"
version = "0.1.0"
description = "Timbre — captures your authentic voice and drafts on-brand posts you approve, from a cold start."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

# The 'api' extra powers the web path: the Anthropic SDK (live generation) plus the
# FastAPI backend in api/ that serves the Next.js app. The CLI still runs with no key
# (TerminalProvider). Install with:  uv pip install -e ".[api]"
[project.optional-dependencies]
api = [
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
tb = "engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
