[project]
name = "timbre"
version = "0.1.0"
description = "Timbre — captures your authentic voice and drafts on-brand posts you approve, from a cold start."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

# The 'api' extra adds the Anthropic SDK so you can run against your own API key
# (`--provider anthropic`). The CLI and the Claude Code plugin run with no key by
# default (TerminalProvider). Install with:  uv pip install -e ".[api]"
#
# The 'web' extra adds the local intake server (`tb welcome`) — a no-key browser
# onboarding that only collects answers into data/intake.json. No model calls here;
# the AI steps stay in the terminal. Install with:  uv pip install -e ".[web]"
[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
tb = "engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
