[project]
name = "timbre"
version = "0.1.0"
description = "Timbre — captures your authentic voice and drafts on-brand posts you approve, from a cold start."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # The local web onboarding (`tb welcome`) — a no-key browser intake that writes answers
    # into data/intake.json. In the base install because onboarding is the product's front door.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

# The 'api' extra adds the Anthropic SDK so you can run against your own API key
# (`--provider anthropic`). The CLI and the Claude Code plugin run with no key by
# default (TerminalProvider). Install with:  uv pip install -e ".[api]"
[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
tb = "engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
